<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@drawable/carwallpaper1"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/carbuddy"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"></ImageView>



    <TextView
        android:id="@+id/textViewPrietenulMasinii"
        android:layout_width="311dp"
        android:layout_height="73dp"
        android:layout_marginLeft="0dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:text="@string/prietenul_masinii_tale"
        android:textColor="@color/darkBluuu"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:textStyle="bold|italic"></TextView>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_rounded"
        android:padding="10dp"
        android:text="@string/conecteaza_te"
        android:textColor="@color/darkBluuu"
        android:textStyle="bold"></Button>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_rounded"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/inregistreaza_te"
        android:textColor="@color/darkBluuu"
        android:textStyle="bold"></Button>


</LinearLayout>