<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carbuddy.util.AddExpenses"
    android:background="@drawable/carwallpaper1"
    tools:showIn="@layout/activity_add_expenses">

    <TextView
        android:id="@+id/addExpensee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"

        android:layout_marginBottom="30dp"
        android:fontFamily="serif"
        android:text="@string/adauga_cheltuiala"
        android:textColor="@color/darkBluuu"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/addCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/addCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:hint="@string/adauga_cost"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/addPlace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpensee">
        ></EditText>

    <EditText
        android:id="@+id/addPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="121dp"

        android:layout_marginRight="121dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif"
        android:hint="@string/adauga_locatie"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/addexpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCost">
        ></EditText>

    <Button
        android:id="@+id/addexpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:layout_marginBottom="102dp"
        android:background="@drawable/login_rounded"
        android:fontFamily="serif"
        android:text="@string/adauga_cheltuiala"
        android:textColor="@color/darkBluuu"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlace"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>
